--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 fastapi==0.111.0
 uvicorn[standard]==0.30.3
 python-dotenv==1.0.1
-git+https://github.com/crapher/pyhomebroker.git
+pyhomebroker
 xlwings==0.30.12
 pandas==2.2.2
 python-dateutil==2.9.0.post0
